2010-05-28  Antti Koivisto  <koivisto@iki.fi>

        Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=39874
        [Qt] Make tiled backing store more configurable
    
        Make tile size, tile creation delay and tiling area dynamically configurable.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::dynamicPropertyChangeEvent):

2010-05-29  Dawit Alemayehu  <adawit@kde.org>

        Reviewed by Kenneth Rohde Christiansen.

        Added a WebAction to stop all pending page refresh/redirect
        requests set through the <meta http-equiv="refresh"...> tag.

        https://bugs.webkit.org/show_bug.cgi?id=29899

        * Api/qwebpage.cpp:
        (QWebPage::triggerAction):
        * Api/qwebpage.h:
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::testStopScheduledPageRefresh):

2010-04-20  Robert Hogan  <robert@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] Add more support for textInputController

        Add support for selectedRange(), setMarkedText(), insertText(),
        and firstRectForCharacterRange().

        https://bugs.webkit.org/show_bug.cgi?id=35702

        * Api/qwebpage.cpp:
        (QWebPagePrivate::inputMethodEvent):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods):

2010-05-20  Janne Koskinen  <janne.p.koskinen@digia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] WINSCW compile fix for qwebframe test
        https://bugs.webkit.org/show_bug.cgi?id=38722

        WINSCW cannot determine template type up the hierarchy
        to common base class.

        * tests/qwebframe/tst_qwebframe.cpp:

2010-05-23  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Update the Symbian version for the user agent
        https://bugs.webkit.org/show_bug.cgi?id=38389

        Fixes a regression introduced by r58648. Ensure that the "Symbian" string